--- a/themes/charlesgao/stylesheets/style.less
+++ b/themes/charlesgao/stylesheets/style.less
@@ -76,7 +76,7 @@ h1, h2, h3, h4 {
 }
 
 .blog-title {
-  width: 816px;
+  width: 800px;
   margin: auto;
   h1 {
     margin-top: 30px;
@@ -96,15 +96,9 @@ h1, h2, h3, h4 {
     font-size: 13px;
   }
 }
-
-.container {
-    width: 816px;
-    margin: 20px auto;
-}
-
 .content {
-  float: left;
-  width: 600px;
+  margin: 20px auto;
+  width: 800px;
   .post, .comments {
     margin-bottom: 15px;
     .title {
@@ -153,11 +147,28 @@ h1, h2, h3, h4 {
   }
 }
 
-#post-tags {
-  color: #fff;
-  padding: 2px 2px 2px 2px;
-  background-color: @alpha-blue;
-  font-size: 14px;
+.post-tags {
+  margin:0;
+  padding:5px 0 ;
+  overflow:hidden;
   .border-radius(3px);
-  .box-shadow(0, 0px, 5px, 0.5);
+  a {
+    padding: 3px 6px;
+    background: #eee;
+    color: #228B22;
+    border-radius: 3px;
+    text-decoration:none;
+  }
+  a:hover {
+    background:#228B22;
+    color:#FFF; 
+  }
+}
+
+blockquote {
+  padding: 8px;
+  background-color: #eee;
+  border-left: 3px solid #aaa;
+  margin: 5px;
+  text-indent: 23px;
 }
