style change and added analytics

--- a/themes/charlesgao/layouts/post.html
+++ b/themes/charlesgao/layouts/post.html
@@ -7,7 +7,7 @@ layout : default
   {{{ content }}}
     <div class="post-tags">
     {{# page.tags?to_tags }}
-      <a href="{{url}}">{{name}} <sup>{{count}}</sup></a>
+      <a href="{{url}}">{{name}}</a>
     {{/ page.tags?to_tags }}
     </div>
   </div>
