--- a/themes/charlesgao/layouts/default.html
+++ b/themes/charlesgao/layouts/default.html
@@ -6,7 +6,7 @@
   {{{ assets }}}
 </head>
 
-<body>
+<body onLoad="init();">
 
     <div class="blog-title">
       <h1><a href="/">{{ site.title }}</a></h1>
