--- a/themes/charlesgao/stylesheets/style.less
+++ b/themes/charlesgao/stylesheets/style.less
@@ -44,6 +44,8 @@
   -webkit-box-shadow: @x @y @blur @color inset;
 }
 
+code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
+
 html { margin: 0 }
 body {
   background: #fff;
