--- a/themes/charlesgao/stylesheets/style.less
+++ b/themes/charlesgao/stylesheets/style.less
@@ -163,10 +163,10 @@ h1, h2, h3, h4 {
   padding:15px;
   overflow:hidden;
   border: 1px dashed @darkest;
-  line-height: 16px;
   .box-shadow(0, 0px, 15px, 0.5);
+  line-height: 150%;
   a {
-    padding: 3px 6px;
+    padding: 1px 2px;
     background: #eee;
     color: #228B22;
     border-radius: 3px;
